--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ body {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.6;
-  background-color: #fff; // optional, change if needed
+background: #0c0c0c;
   color: #212529;
 }
 
