--- a/src/App.scss
+++ b/src/App.scss
@@ -1,45 +1,24 @@
+// src/app.scss
 
-//  Import Google Fonts
+// Google Fonts
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap');
 
-
-
-//  Import Bootstrap SCSS
+// Bootstrap
 @import "bootstrap/scss/bootstrap";
 
-//  Global reset / best practice
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-//  Body & typography
+// App-specific typography
 body {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.6;
-  background: transparent;
-  color: #212529;
+  color: #e6e6e6; // can also use vars.$text-light
 }
 
-// Headings
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
-  font-weight: 600; // default weight
-
+  font-weight: 600;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
 
-
-//  Images
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
-
-// Additional starter utility classes can be added here
