--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,6 +26,7 @@ $spacing-sm: 0.5rem;
 $spacing-md: 1rem;
 $spacing-lg: 2rem;
 $spacing-xl: 3rem;
+$content-inset: 10px; /* horizontal padding to match navbar/topbar */
 
 
 $letter-spacing-sm: 0.09rem;
