--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,7 +6,7 @@
     border: 1px solid rgba(15, 23, 42, 0.12);
     border-radius: 16px;
     padding: 0.35rem 1rem;
-    width: auto;
+    width: 299px;
     height: 48px;
     color: #fff;
     font-size: 0.85rem;
