--- a/src/components/LanguageSelector/LanguageSelector.module.scss
+++ b/src/components/LanguageSelector/LanguageSelector.module.scss
@@ -16,7 +16,7 @@
   gap: 0.5rem;
 
   font-weight: 500;
-
+  padding-right: 0px !important;
 
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
