--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -41,3 +41,8 @@ $regular-weight: 500;
 $light-weight: 400;
 
 $shadow-light: 0 6px 15px rgba(0, 0, 0, 0.18);
+
+
+
+$gradient-green-start: #1e2c06;
+$gradient-green-end: #0d1501;
