--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,5 @@
 // src/styles/_variables.scss
 // ------------------------------
-// Color, typography, spacing variables
-// ------------------------------
 
 /* Colors */
 $text-light: #e6e6e6;
@@ -17,9 +15,13 @@ $font-heading: 'Playfair Display', serif;
 /* Font sizes */
 $font-xs: 0.8125rem; // 13px
 $font-sm: 0.9375rem; // 15px
-$font-base: 1rem;    // 16px
-$font-lg: 1.125rem;  // 18px
-$font-xl: 1.25rem;   // 20px
+$font-base: 1rem; // 16px
+$font-lg: 1.125rem; // 18px
+$font-xl: 1.25rem; // 20px
+
+/* Breakpoints (Bootstrap-aligned) */
+$bp-desktop: 992px; // lg and up = desktop
+$bp-mobile-max: 991.98px; // below lg = mobile/tablet
 
 /* Spacing / layout */
 $spacing-xs: 0.25rem;
@@ -27,11 +29,11 @@ $spacing-sm: 0.5rem;
 $spacing-md: 1rem;
 $spacing-lg: 2rem;
 $spacing-xl: 3rem;
-$content-inset: 10px; 
+$content-inset: 10px;
 
 
 $letter-spacing-sm: 0.09rem;
-$h1-size: 4.25rem;  // 68px
+$h1-size: 4.25rem; // 68px
 $h2-size: 3.125rem; // 50px 
 $h3-size: 1.875rem; // 30px 
 
