--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -31,7 +31,7 @@
     top: 0;
     width: 50%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.338);
     z-index: 5;
     pointer-events: none;
   }
@@ -56,9 +56,6 @@
     
   }
 
-
-
-  /* Passed to Carousel as slideClassName for consistent slide height/spacing */
   .slideContent {
     padding-bottom: 3rem;
     min-height: 280px;
@@ -90,7 +87,7 @@
     
   }
 
-  h1 {
+  .heading {
     font-family: $font-heading;
     font-size: $h1-size;
     font-weight: $regular-weight;
@@ -100,22 +97,25 @@
   }
 }
 
+
 @media (max-width: 768px) {
-  .hero {
-    min-height: 500px;
 
-    .textCarousel .slideContent {
-      padding-bottom: 2.5rem;
-      min-height: 220px;
-    }
+.darkOverlay {
+    width: 100% !important;
+  }
 
-    h1 {
-      font-size: clamp(2.25rem, 6vw, $h1-size);
-    }
+
+  .heading {
+    font-size: $h2-size !important;
+    font-weight: $regular-weight;
+  }
 
     .description {
-      font-size: 0.875rem;
-      margin-bottom: 2rem;
-    }
+    font-size: $font-sm;
+    line-height: 1.6;
+  
+    white-space: normal; 
+    
   }
 }
+
