--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -46,5 +46,5 @@ $shadow-light: 0 6px 15px rgba(0, 0, 0, 0.18);
 
 
 
-$gradient-green-start: #233409;
+$gradient-green-start: #2e440d;
 $gradient-green-end: #0d1501;
