--- a/src/components/MallSection/MallSection.module.scss
+++ b/src/components/MallSection/MallSection.module.scss
@@ -107,6 +107,10 @@
   color: $text-light;
 }
 
+
+
+
+
 @media (max-width: 768px) {
   .section {
     padding: 3rem 0;
@@ -122,9 +126,23 @@
 
   .card {
     max-width: 100%;
+    padding-bottom: 2.5rem;
   }
 
   .cardDesc {
     width: 100%;
+    font-size: $font-base;
+    line-height: 1.6;
+  }
+
+  .cardTitle {
+    font-size: clamp(1.25rem, 5vw, 1.5rem);
+  }
+
+  .arrow {
+    top: auto;
+    bottom: 1.25rem;
+    right: 1.25rem;
+    transform: none;
   }
 }
