--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -9,6 +9,18 @@
   padding-bottom: 3rem;
 }
 
+.rootRtl {
+  direction: rtl;
+
+  .indicators {
+    left: auto;
+    right: 0;
+    justify-content: flex-start;
+    padding-right: 0;
+    padding-left: 1.5rem;
+  }
+}
+
 .slidePane {
   transition: opacity 0.4s ease-in-out;
 }
@@ -70,6 +82,13 @@
     padding-right: 1.25rem;
     bottom: -10rem;
   }
+
+  .rootRtl {
+    .indicators {
+      padding-right: 0;
+      padding-left: 1.25rem;
+    }
+  }
 }
 
 
@@ -84,5 +103,12 @@
     width: 100%;
     padding-right: 1.25rem;
     bottom: -6rem !important;
+  }
+
+  .rootRtl {
+    .indicators {
+      padding-right: 0;
+      padding-left: 1.25rem;
+    }
   }
 }
